# C-Primer

./: CMakeLists.txt  main.cpp
include/: Primer.h
src/: Primer.cpp
